Added ping tool.

--- a/network-monitor/network-monitor.csproj
+++ b/network-monitor/network-monitor.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="DnsClient" Version="1.8.0" />
+    <PackageReference Include="Npgsql" Version="9.0.2" />
     <PackageReference Include="System.Net.Ping" Version="4.3.0" />
   </ItemGroup>
 
