--- a/network-monitor/network-monitor.csproj
+++ b/network-monitor/network-monitor.csproj
@@ -5,10 +5,13 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>network_monitor</RootNamespace>
+    <UserSecretsId>6da345d6-8760-4636-ad3e-1a44d3cadb88</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="DnsClient" Version="1.8.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.21.0" />
     <PackageReference Include="Npgsql" Version="9.0.2" />
     <PackageReference Include="System.Net.Ping" Version="4.3.0" />
   </ItemGroup>
