--- a/network-monitor/Dockerfile
+++ b/network-monitor/Dockerfile
@@ -1,30 +1,24 @@
-# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-# This stage is used when running from VS in fast mode (Default for Debug configuration)
-FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
-USER $APP_UID
+# Stage 1: Build
+FROM mcr.microsoft.com/dotnet/sdk:7.0 AS build
 WORKDIR /app
+
+# Copy project files and restore dependencies
+COPY network-monitor/*.csproj ./
+RUN dotnet restore
+
+# Copy the rest of the application files and build the app
+COPY network-monitor/ ./
+RUN dotnet publish -c Release -o /out
+
+# Stage 2: Runtime
+FROM mcr.microsoft.com/dotnet/aspnet:7.0 AS runtime
+WORKDIR /app
+
+# Copy the published output from the build stage
+COPY --from=build /out .
+
+# Expose the port the application listens on
 EXPOSE 8080
-EXPOSE 8081
 
-
-# This stage is used to build the service project
-FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
-ARG BUILD_CONFIGURATION=Release
-WORKDIR /src
-COPY ["network-monitor/network-monitor.csproj", "network-monitor/"]
-RUN dotnet restore "./network-monitor/network-monitor.csproj"
-COPY . .
-WORKDIR "/src/network-monitor"
-RUN dotnet build "./network-monitor.csproj" -c $BUILD_CONFIGURATION -o /app/build
-
-# This stage is used to publish the service project to be copied to the final stage
-FROM build AS publish
-ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./network-monitor.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
-
-# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
-FROM base AS final
-WORKDIR /app
-COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "network-monitor.dll"]
+# Run the application
+CMD ["dotnet", "NetworkMonitor.dll"]
