Adjusted render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -3,4 +3,5 @@ services:
     name: network-monitor
     runtime: docker
     plan: free
-    dockerfilePath: Dockerfile
+    dockerfilePath: ./Dockerfile
+    
